# Phantom

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: CMakeLists.txt  ci.yml  main.yml
src/: main.cpp
src/logger/: logger.cpp  logger.h
src/server/: server_class.cpp  server_class.h
tests/: test_main.cpp
